<resources>
    <string name="app_name">Recipics</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save recipe</string>
    <string name="new_picture">Take a new picture</string>
    <string name="recipeName">Recipe name (required)</string>
    <string name="notes">Notes about this recipe</string>
    <string name="source">Recipe source</string>
    <string name="starred">This is a favorite recipe</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_recipe_name">Banana Bread</string>
    <string name="hint_notes">Bake for 10min only</string>
    <string name="hint_source">My Favorite Cook Book</string>
    <string name="tags_chosen">Chosen tags</string>
    <string name="tags_available">Available tags</string>
    <string name="search">Search...</string>
    <string name="picture_empty">You can\'t save a recipe without a picture!</string>
    <string name="name_empty">You can\'t save a recipe without a name!</string>
</resources>
